--- a/templates/index.html
+++ b/templates/index.html
@@ -1,26 +1,14 @@
 <html>
 <head>
 <style>
-
-    body {
-        text-align: center;
-        margin-top: 50px;
-        font-size: 25px;
-        background-color: darkslategrey;
-
-    }
-
-    h1 {
-        color: skyblue;
-    }
-
 </style>
 </head>
 
 <!--##NO predefine-->
-<body>
-    <h1>Advance Calculator!</h1>  <br>
+<body style="text-align: center; margin-top: 50px; font-size: medium; background-color: powderblue;">
+    <h1 style="color: deeppink;">Advance Calculator!</h1>  <br>
     <img width="20%" height="20%" src="{{url_for('static', filename='img.png') }} " />
+    <br><br>
     <form method="POST">
         <label >Enter expression</label><br><br>
         <select class="is-focused is-large" name="operation" aria-label="operationDropdown">
@@ -29,10 +17,12 @@
             <option value="factor">Factor</option>
         </select>
     <input placeholder="Expression" name="text">
-    <input type="submit">
+    <input style="background-color: red; color: black; margin: 3px;" type="submit">
 </form>
 
 
     <p>Your equation is {{equation}} = {{ result }}</p>
+    <br><br><br>
+    <footer>Created by Ridwan</footer>
 </body>
 </html>
